# brainfuck-art

./: .gitignore  .readthedocs.yml  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml  tests.yml
brainfuck_art/: __init__.py  brainfuck_interpreter.py  generate_html.py  image_matrix_generator.py
docs/: conf.py  index.rst  modules.rst
tests/: test_brainfuck_generation.py  test_image_matrix.py
